Font Awesome update & invisible icon fix
Font Awesome update & invisible icon fix

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -387,3 +387,7 @@ pre {
 .fixedsticky {
   top: 0;
 }
+
+.fa {
+  transform: translate(0, 0);
+}
